--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -164,6 +164,7 @@
     <Compile Include="myScrObjects\myObj_840.cs" />
     <Compile Include="myScrObjects\myObj_850.cs" />
     <Compile Include="myScrObjects\myObj_860.cs" />
+    <Compile Include="myScrObjects\myObj_870.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
