--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -168,6 +168,7 @@
     <Compile Include="myScrObjects\myObj_870.cs" />
     <Compile Include="myScrObjects\myObj_880.cs" />
     <Compile Include="myScrObjects\myObj_890.cs" />
+    <Compile Include="myScrObjects\myObj_999_test_004.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
