--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -172,6 +172,7 @@
     <Compile Include="myScrObjects\myObj_900.cs" />
     <Compile Include="myScrObjects\myObj_910.cs" />
     <Compile Include="myScrObjects\myObj_920.cs" />
+    <Compile Include="myScrObjects\myObj_930.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
