--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -179,6 +179,7 @@
     <Compile Include="myScrObjects\myObj_960.cs" />
     <Compile Include="myScrObjects\myObj_970.cs" />
     <Compile Include="myScrObjects\myObj_980.cs" />
+    <Compile Include="myScrObjects\myObj_990.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_131.cs" />
     <Compile Include="myScrObjects\myObj_220.cs" />
