--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -117,6 +117,7 @@
     <Compile Include="myScrObjects\myObj_011b.cs" />
     <Compile Include="myScrObjects\myObj_691.cs" />
     <Compile Include="myScrObjects\myObj_901.cs" />
+    <Compile Include="myScrObjects\myObj_992.cs" />
     <Compile Include="myScrObjects\myObj_999_test_002c.cs" />
     <Compile Include="myScrObjects\myObj_999_test_003.cs" />
     <Compile Include="myScrObjects\myObj_541.cs" />
