--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -183,6 +183,7 @@
     <Compile Include="myScrObjects\myObj_0990.cs" />
     <Compile Include="myScrObjects\myObj_1000.cs" />
     <Compile Include="myScrObjects\myObj_1010.cs" />
+    <Compile Include="myScrObjects\myObj_1020.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
