--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -187,6 +187,7 @@
     <Compile Include="myScrObjects\myObj_1010.cs" />
     <Compile Include="myScrObjects\myObj_1020.cs" />
     <Compile Include="myScrObjects\myObj_1040.cs" />
+    <Compile Include="myScrObjects\myObj_1050.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
