--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -77,6 +77,7 @@
     <Compile Include="myScrObjects\myObj_0030.cs" />
     <Compile Include="myScrObjects\myObj_0010.cs" />
     <Compile Include="myScrObjects\myObj_0071.cs" />
+    <Compile Include="myScrObjects\myObj_0231.cs" />
     <Compile Include="myScrObjects\myObj_0330.cs" />
     <Compile Include="myScrObjects\myObj_0102.cs" />
     <Compile Include="myScrObjects\myObj_0130.cs" />
