--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -205,6 +205,7 @@
     <Compile Include="myScrObjects\myObj_1180.cs" />
     <Compile Include="myScrObjects\myObj_0341.cs" />
     <Compile Include="myScrObjects\myObj_1190.cs" />
+    <Compile Include="myScrObjects\myObj_1200.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
