--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /glfw-3.3.8.bin.WIN64.zip
 /StarfieldPlus.OpenGL/OpenGL/GLFW/obj
 /StarfieldPlus.OpenGL/bin/Release
+/StarfieldPlus.OpenGL/bin/Debug/zzz.log
