--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -209,6 +209,7 @@
     <Compile Include="myScrObjects\myObj_1210.cs" />
     <Compile Include="myScrObjects\myObj_1220.cs" />
     <Compile Include="myScrObjects\myObj_1230.cs" />
+    <Compile Include="myScrObjects\myObj_1240.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
