--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -213,6 +213,7 @@
     <Compile Include="myScrObjects\myObj_1250.cs" />
     <Compile Include="myScrObjects\myObj_1260.cs" />
     <Compile Include="myScrObjects\myObj_1270.cs" />
+    <Compile Include="myScrObjects\myObj_1280.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
