--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -214,6 +214,7 @@
     <Compile Include="myScrObjects\myObj_1260.cs" />
     <Compile Include="myScrObjects\myObj_1270.cs" />
     <Compile Include="myScrObjects\myObj_1280.cs" />
+    <Compile Include="myScrObjects\myObj_1290.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
