--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -215,6 +215,7 @@
     <Compile Include="myScrObjects\myObj_1270.cs" />
     <Compile Include="myScrObjects\myObj_1280.cs" />
     <Compile Include="myScrObjects\myObj_1290.cs" />
+    <Compile Include="myScrObjects\myObj_1300.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
