--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -217,6 +217,7 @@
     <Compile Include="myScrObjects\myObj_1290.cs" />
     <Compile Include="myScrObjects\myObj_1300.cs" />
     <Compile Include="myScrObjects\myObj_1310.cs" />
+    <Compile Include="myScrObjects\myObj_1320.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
