--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -220,6 +220,7 @@
     <Compile Include="myScrObjects\myObj_1320.cs" />
     <Compile Include="myScrObjects\myObj_1330.cs" />
     <Compile Include="myScrObjects\myObj_1340.cs" />
+    <Compile Include="myScrObjects\myObj_1350.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
