--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -221,6 +221,7 @@
     <Compile Include="myScrObjects\myObj_1330.cs" />
     <Compile Include="myScrObjects\myObj_1340.cs" />
     <Compile Include="myScrObjects\myObj_1350.cs" />
+    <Compile Include="myScrObjects\myObj_1360.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
