--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -227,6 +227,7 @@
     <Compile Include="myScrObjects\myObj_1390.cs" />
     <Compile Include="myScrObjects\myObj_1400.cs" />
     <Compile Include="myScrObjects\myObj_1410.cs" />
+    <Compile Include="myScrObjects\myObj_1420.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
