--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -236,6 +236,7 @@
     <Compile Include="myScrObjects\myObj_1470.cs" />
     <Compile Include="myScrObjects\myObj_1490.cs" />
     <Compile Include="myScrObjects\myObj_1510.cs" />
+    <Compile Include="myScrObjects\myObj_1520.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
