--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -237,6 +237,7 @@
     <Compile Include="myScrObjects\myObj_1490.cs" />
     <Compile Include="myScrObjects\myObj_1510.cs" />
     <Compile Include="myScrObjects\myObj_1520.cs" />
+    <Compile Include="myScrObjects\myObj_1530.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
