--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -238,6 +238,7 @@
     <Compile Include="myScrObjects\myObj_1510.cs" />
     <Compile Include="myScrObjects\myObj_1520.cs" />
     <Compile Include="myScrObjects\myObj_1530.cs" />
+    <Compile Include="myScrObjects\myObj_1540.cs" />
     <Compile Include="myScrObjects\myObj__empty.cs" />
     <Compile Include="myScrObjects\myObj_0131.cs" />
     <Compile Include="myScrObjects\myObj_0220.cs" />
