--- a/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
+++ b/StarfieldPlus.OpenGL/StarfieldPlus.OpenGL.csproj
@@ -125,6 +125,7 @@
     <Compile Include="myScrObjects\myObj_1450.cs" />
     <Compile Include="myScrObjects\myObj_1440.cs" />
     <Compile Include="myScrObjects\myObj_1430.cs" />
+    <Compile Include="myScrObjects\myObj_1545.cs" />
     <Compile Include="myScrObjects\myObj_9999_test_002c.cs" />
     <Compile Include="myScrObjects\myObj_9999_test_003.cs" />
     <Compile Include="myScrObjects\myObj_0541.cs" />
